# lazytasks

./: Cargo.toml
src/: app.rs  editor.rs  keybindings.rs  main.rs  state.rs  template.md
src/actions/: archive_workspace.rs  clean_err_msg.rs  create_space.rs  create_task.rs  create_workspace.rs  delete_task.rs  delete_workspace.rs  edit_priority.rs  edit_task.rs  edit_title.rs  mod.rs  move_task.rs  open_archive_modal.rs  open_archive_workspace_modal.rs  open_create_space_modal.rs  open_create_task_modal.rs  open_create_workspace_modal.rs  open_delete_modal.rs  open_delete_workspace_modal.rs  open_edit_title_modal.rs  open_move_task_modal.rs  open_priority_modal.rs  quit.rs  toggle_archive_task.rs  toggle_task_completion.rs  toggle_task_selection.rs
src/components/: archived.rs  bottom_bar.rs  edit_task.rs  main_view.rs  mod.rs  remove_task.rs  scrollbar.rs  sidebar.rs  tasks.rs
src/components/bottom_bar/: error_hints.rs  key_hints.rs  mod.rs
src/components/modals/: archive_task.rs  archive_workspace.rs  create_task.rs  delete_task.rs  delete_workspace.rs  edit_task.rs  mod.rs  move_task.rs  priority_task.rs
src/components/shared/: mod.rs  modal.rs  priority_span.rs
src/components/sidebar/: active_tasks.rs  archived_tasks.rs  layout.rs  mod.rs
src/components/workspace/: main_view.rs  mod.rs
src/db/: connection.rs  mod.rs
src/db/repositories/: mod.rs  space.rs  task.rs  workspace.rs
src/db/schema/: tasks.sql  workspaces.sql
src/models/: mod.rs  priority.rs  space.rs  task.rs  workspace.rs
src/storage/: storage.rs
(+9 files in other folders)
