[package]
name = "lazytasks"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-input = "0.14.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
