[package]
name = "lazytasks"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
crossterm = "0.28.1"
dirs = "6.0.0"
ratatui = "0.30.0"
tui-input = "0.15.0"
uuid = { version = "1.19.0", features = ["v4"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
tui-tree-widget = "0.24.0"
